# big_data

./: .gitignore  PROJECT_LOG.md  README.md  docker-compose.yml
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/140953ba-1760-46ce-be05-4faf1da55b5e/: xl.meta.bkp
data/.minio.sys/tmp/.trash/1f9bd82d-f75d-4089-b5e8-b175fe4ccd4d/: xl.meta.bkp
data/.minio.sys/tmp/.trash/31f4acd5-4a12-4a80-bd90-bd44b62ba0dc/: xl.meta.bkp
data/.minio.sys/tmp/.trash/379e076f-c205-4887-a81b-3c81e1c6a10d/: xl.meta.bkp
data/.minio.sys/tmp/.trash/3cfa4b85-444a-4fbc-b8c0-c36781785d66/: xl.meta.bkp
data/.minio.sys/tmp/.trash/47168b4d-5d6d-4bb7-8fba-bfe3074f3e1e/: xl.meta.bkp
data/.minio.sys/tmp/.trash/4cf050df-233c-4acc-8124-9c5c8ddd59e6/: xl.meta.bkp
data/.minio.sys/tmp/.trash/52e56a8e-a93a-4bbb-9878-d0ba02dbe85e/: xl.meta.bkp
ex01_data_retrieval/: build.sbt
ex01_data_retrieval/src/main/scala/: main.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/src/main/scala/: ingest.scala  main.scala  validate.scala
ex03_sql_table_creation/: creation.sql  insertion.sql
ex04_dashboard/: Exercise_4_Dashboard_Report.md  Exercise_4_Dashboard_Report_FR.md
ex05_ml_prediction_service/: README.md  pyproject.toml
ex05_ml_prediction_service/models/: .gitkeep
ex05_ml_prediction_service/src/: app.py  eda.py  inference.py  preprocessing.py  train.py
ex05_ml_prediction_service/tests/: test_inference.py  test_preprocessing.py
ex06_airflow/: Dockerfile  README.md
ex06_airflow/dags/: nyc_taxi_pipeline.py  pipeline.py
(+20 files in other folders)
