[project]
name = "nyc-taxi-prediction"
version = "0.1.0"
description = "NYC Taxi Fare Prediction Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "s3fs>=2023.10.0",
    "joblib>=1.3.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "streamlit>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "__pycache__"]
